# quantum-tensornet-simulation-gpu

./: .gitignore  CMakeLists.txt  frontend.ipynb  pipeline.ipynb  to_execute.sh
include/: Contraction.hpp  bitset.hpp  bitsetCU.cuh  qTensor.cuh  qTensor.hpp  qTensorCUDA.cuh
python_tools/: experiment.py  extract_results.py  plot_floatvsdouble.py  plot_new.ipynb  plot_speedup.py  speedupvsqiskit.ipynb
src/: mainsql.cpp  mainsql.cu  qTensorCUDA.cu
